--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ PHP                                                                        NEWS
 ?? ??? 201?, PHP 5.5.0
 
 - General improvements:
+  . Added support for generators. (Nikita Popov)
   . Add simplified password hashing API 
     (https://wiki.php.net/rfc/password_hash). (Anthony Ferrara)
   . Add generators and coroutines (https://wiki.php.net/rfc/generators).
@@ -15,6 +16,8 @@ PHP                                                                        NEWS
   . Add support for using empty() on the result of function calls and
     other expressions (https://wiki.php.net/rfc/empty_isset_exprs).
     (Nikita Popov)
+  . Remove php_logo_guid(), php_egg_logo_guid(), php_real_logo_guid(),
+    zend_logo_guid(). (Adnrew Faulds)
 
 - Calendar:
   . Fixed bug #54254 (cal_from_jd returns month = 6 when there is only one Adar)
@@ -22,16 +25,17 @@ PHP                                                                        NEWS
 
 - Core:
   . Added boolval(). (Jille Timmermans).
+  . Added "Z" option to pack/unpack. (Gustavo)
+  . Implemented FR #60738 (Allow 'set_error_handler' to handle NULL).
+    (Laruence, Nikita Popov)
+  . Added optional second argument for assert() to specify custom message. Patch
+    by Lonny Kapelushnik (lonny@lonnylot.com). (Lars)
   . Fixed bug #18556 (Engine uses locale rules to handle class names). (Stas)
   . Fixed bug #61681 (Malformed grammar). (Nikita Popov, Etienne, Laruence).
   . Fixed bug #61038 (unpack("a5", "str\0\0") does not work as expected).
     (srgoogleguy, Gustavo)
-  . Implemented FR #60738 (Allow 'set_error_handler' to handle NULL).
-    (Laruence, Nikita Popov)
   . Return previous handler when passing NULL to set_error_handler and
     set_exception_handler. (Nikita Popov)
-  . Added optional second argument for assert() to specify custom message. Patch
-    by Lonny Kapelushnik (lonny@lonnylot.com). (Lars)
 
 - cURL:
   . Added support for CURLOPT_FTP_RESPONSE_TIMEOUT, CURLOPT_APPEND, 
@@ -154,7 +158,6 @@ PHP                                                                        NEWS
   . Dropped support for LOAD DATA LOCAL INFILE handlers when using libmysql.
     Known for stability problems. (Andrey)
   . Added support for SHA256 authentication available with MySQL 5.6.6+. (Andrey)
-	
 
 - PCRE:
   . Deprecated the /e modifier
@@ -163,6 +166,10 @@ PHP                                                                        NEWS
 
 - pgsql
   . Added pg_escape_literal() and pg_escape_identifier() (Yasuo)
+
+- SPL
+  . Fix bug #60560 (SplFixedArray un-/serialize, getSize(), count() return 0,
+    keys are strings). (Adam)
 
 - Tokenizer:
   . Fixed bug #60097 (token_get_all fails to lex nested heredoc). (Nikita Popov)
