--- a/NEWS
+++ b/NEWS
@@ -181,4 +181,7 @@ PHP                                                                        NEWS
   . Fixed bug #63248 (Load multiple magic files from a directory under Windows).
       (Anatoliy)
 
+- Apache2 Handler SAPI:
+  . Enabled Apache 2.4 configure option for Windows (Pierre, Anatoliy)
+
 <<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>
