--- a/NEWS
+++ b/NEWS
@@ -37,9 +37,21 @@ PHP                                                                        NEWS
     (Dmitry, Laruence)
   . Fixed bug #63284 (Upgrade PCRE to 8.31). (Anatoliy)
 
+- PDO:
+  . Fixed bug #63235 (buffer overflow in use of SQLGetDiagRec).
+    (Martin Osvald, Remi)
+
+- PDO_pgsql:
+  . Fixed bug #62593 (Emulate prepares behave strangely with PARAM_BOOL).
+    (Will Fitch)
+
 - Phar:
   . Fixed bug #63297 (Phar fails to write an openssl based signature).
     (Anatoliy)
+
+- Streams:
+  . Fixed bug #63240 (stream_get_line() return contains delimiter string).
+    (Tjerk, Gustavo)
 
 - Reflection:
   . Fixed bug #63399 (ReflectionClass::getTraitAliases() incorrectly resolves
