--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-08 Nov 2012, PHP 5.3.19RC1
+22 Nov 2012, PHP 5.3.19
 
 - Core
   . Fixed bug #63241 (PHP fails to open Windows deduplicated files).
