--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ PHP                                                                        NEWS
 - Fileinfo:
   . Fixed bug #63248 (Load multiple magic files from a directory under Windows).
     (Anatoliy)
+- Imap:
+  . Fixed Bug #63126 DISABLE_AUTHENTICATOR ignores array (Remi)
 
 
 22 Nov 2012, PHP 5.3.19
