--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+?? ??? 2012, PHP 5.4.11
+
 ?? ??? 2012, PHP 5.4.10
 
 - Core:
