--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? 2012, PHP 5.3.20
+06 Dec 2012, PHP 5.3.20RC1
 
 - Zend Engine:
   . Fixed bug #63635 (Segfault in gc_collect_cycles). (Dmitry)
