Tinker with the wording of the MySQL deprecation news post.
I know that in general NEWS is a very punchy "this is what happened" log, but
Chris e-mailed me off-list to ask if it could be added to avoid any FUD — this
merely brings the NEWS post into line with UPGRADING, the migration guide, and
every other piece of advice we're giving out.

I also forgot to add the RFC URL last night, so added that.

--- a/NEWS
+++ b/NEWS
@@ -166,7 +166,8 @@ PHP                                                                        NEWS
 - MySQL
   . This extension is now deprecated, and deprecation warnings will be generated
     when connections are established to databases via mysql_connect(),
-    mysql_pconnect(), or through implicit connection. (Adam)
+    mysql_pconnect(), or through implicit connection: use MySQLi or PDO_MySQL
+    instead (https://wiki.php.net/rfc/mysql_deprecation). (Adam)
 
 - MySQLi
   . Dropped support for LOAD DATA LOCAL INFILE handlers when using libmysql.
