News entry for updated mime types

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ PHP                                                                        NEWS
   . Fixed bug #63737 (json_decode does not properly decode with options
     parameter). (Adam)
 
+- CLI server
+  . Update list of common mime types (Lars, pascalc at gmail dot com)
+
 ?? ??? 2012, PHP 5.4.10
 
 - Core:
