Implement Generator::throw() method
Generator::throw($exception) throws an exception into the generator. The
exception is thrown at the current point of suspension within the generator.
It basically behaves as if the current yield statement were replaced with
a throw statement and the generator subsequently resumed.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ PHP                                                                        NEWS
 - General improvements:
   . Fixed bug #63822 (Crash when using closures with ArrayAccess).
     (Nikita Popov)
+  . Add Generator::throw() method. (Nikita Popov)
 
 - cURL:
   . Added new functions curl_escape, curl_multi_setopt, curl_multi_strerror
