--- a/NEWS
+++ b/NEWS
@@ -6,9 +6,7 @@ PHP                                                                        NEWS
   . Fixed bug #63762 (Sigsegv when Exception::$trace is changed by user).
     (Johannes)
 
-?? ??? 2012, PHP 5.3.20
-
-#### ADD NEWS TO 5.3.21 ONLY ####
+20 Dec 2012, PHP 5.3.20
 
 - Zend Engine:
   . Fixed bug #63635 (Segfault in gc_collect_cycles). (Dmitry)
