--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.4.11
 
 - Core:
+  . Fixed bug #63899 (Use after scope error in zend_compile). (Laruence)
   . Fixed bug #63762 (Sigsegv when Exception::$trace is changed by user).
     (Johannes)
   . Fixed bug #43177 (Errors in eval()'ed code produce status code 500). 
