Bug #23955: allow specifiy max age for setcookie()

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ PHP                                                                        NEWS
   . Fixed bug #63822 (Crash when using closures with ArrayAccess).
     (Nikita Popov)
   . Add Generator::throw() method. (Nikita Popov)
+  . Bug #23955: allow specifying Max-Age attribute in setcookie() (narfbg, Lars)
 
 - cURL:
   . Added new functions curl_escape, curl_multi_setopt, curl_multi_strerror
